Fix time internship

--- a/resume_en.html
+++ b/resume_en.html
@@ -156,7 +156,7 @@ I believe in open-source, I recently contributed to the new reverse proxy <a hre
 <li><p>Methodology: Agile Scrum, 4/5 dev</p></li>
 </ul>
 <dl>
-<dt>Feb. 15 - Aug. 16</dt>
+<dt>Feb. - Aug. 16</dt>
 <dd><strong>Golang Development on <a href="https://traefik.io/">Træfik</a></strong>; <a href="https://containo.us/">Containous</a> - Lyon (France)
 </dd>
 </dl>
